--- a/portfolio2/css/main.css
+++ b/portfolio2/css/main.css
@@ -72,7 +72,6 @@ header nav ul{
     display: flex;
     justify-content: end;
     align-items: center;
-    padding-right: 0.6rem;
 }
 header nav ul li{
     padding: 0 0 0 6rem;
@@ -95,10 +94,9 @@ header section{
                         'experiencia photo'
                         'social photo'
     ;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto;
     grid-template-rows: 14.4rem 15rem 14rem 12rem;
     color: var(--white);
-    border: 1px solid blue;
 }
 
 header section ul li a{
@@ -141,13 +139,11 @@ header section p#experiencia{
     width: 24rem;
 }
 
-header section figure{
+header section img{
     grid-area: photo;
     margin:0;
     padding: 0;
     margin-top: 4rem;
-    background-image: url('../logos-Imagenes/photo-desktop.png');
-    background-repeat: no-repeat;
     height: 536px;
     width: 560px;
 }
