--- a/portfolio1/css/main.css
+++ b/portfolio1/css/main.css
@@ -80,7 +80,7 @@ header{
                         'section'
                         ;
     background-color: var(--green);
-    max-width: 144rem;
+    width: 100%;
     height: 119rem;
 }
 header nav{
@@ -299,7 +299,8 @@ header section form fieldset input[type=submit]{
 
 main{
     margin: 26rem auto 0 auto;
-    max-width: 144rem;
+    padding: 0 1rem;
+    width: 100%;
     height: auto;
     font-size: 18px;
 }
@@ -487,7 +488,7 @@ main #contact ul li img{
 }
 footer{
     margin: 0 auto;
-    max-width: 144rem;
+    width: 100%;
     background-color: var(--dark-green);
     display: flex;
     flex-direction: column;
@@ -608,9 +609,11 @@ footer .copyright a:hover{
         padding: 1rem;
         width: 100%;
     }
+    /*
     header nav input:checked ~ ul{
         left: 0;
     }
+    */
     header #person{
         margin: 5rem auto 1.6rem auto;
         z-index: 1;
@@ -687,7 +690,7 @@ footer .copyright a:hover{
         font-size: var(--size-text2);
     }
     main #about{
-        padding: 0 2rem;
+        padding: 0 0;
     }
     main #about p{
         border-left: 4px solid var(--dark-green);
@@ -705,10 +708,12 @@ footer .copyright a:hover{
         color: var(--white);
         text-align: center;
         padding: 0 2rem;
+        
     }
     main #about a img{
         height: 2rem;
         width: 2rem;
+        
     }
     main #studies ul{
         flex-direction: column;
@@ -746,10 +751,10 @@ footer .copyright a:hover{
         padding: 0 2rem 6rem 2rem;
     }
     main #experience{
-        padding: 1rem 1rem 5rem 1rem;
+        padding: 1rem 0rem 5rem 0rem;
     }    
     main #portfolio{
-        padding-top: 4rem 2rem 0 2rem;
+        padding-top: 4rem 1rem 0 1rem;
     }
     main #portfolio ul li{
         box-shadow: none;
@@ -770,6 +775,9 @@ footer .copyright a:hover{
         padding-top: 2rem;
         max-width: 80rem;
         grid-template-columns: 1fr 1fr;
+    }
+    main #contact ul li{
+        width: 19rem;
     }
     main #contact ul li .text-phone, main #contact ul li .text-email{
         font-size: var(--size-text2);
