--- a/portfolio2/css/main.css
+++ b/portfolio2/css/main.css
@@ -7,10 +7,10 @@
     --light-gray: #E5E5E5;
     --gray: #999;
     --white: #FFFFFF;
-    --title-desktop: 80px;
-    --subtitle-desktop: 40px;
-    --subtitle-desktop2: 30px;
-    --subtitle-desktop3: 24px;
+    --title: 80px;
+    --subtitle: 40px;
+    --subtitle2: 30px;
+    --subtitle3: 24px;
     --text2: 17px;
 }
 .orange{
@@ -23,12 +23,12 @@
     font-weight: bold;
 }
 .subtitle2{
-    font-size: var(--subtitle-desktop2);
+    font-size: var(--subtitle2);
     color: var(--light-gray);
     font-weight: bold;
 }
 .subtitle3{
-    font-size: var(--subtitle-desktop3);
+    font-size: var(--subtitle3);
     color: var(--light-gray);
 }
 .text2{
@@ -40,6 +40,7 @@ html{
 body{
     font-size: 16px;
     font-family: 'Inter', sans-serif;
+    background-color: #1F1D2C;
 }
 a{
     text-decoration: none;
@@ -49,7 +50,7 @@ ul{
     padding: 0;
 }
 h2{
-    font-size: var(--subtitle-desktop);
+    font-size: var(--subtitle);
     text-align: center;
     font-weight: bold;
     color: var(--white);
@@ -63,18 +64,35 @@ header{
     max-width: 144.2rem;
     padding: 4rem 14.6rem 14.6rem 14.6rem;
     background-color: var(--dark-gray);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 30px -12px;
 }
 header nav{
     position: relative;
     z-index: 1;
 }
+header nav input{
+    display: none;
+}
+header nav label{
+    display: none;
+    background-image: url('../icons/menu.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 2.6rem;
+    height: 2.6rem;
+    filter: invert(1);
+    position: absolute;
+    margin: 0;
+    top: -2rem;
+    right: -1rem;
+}
 header nav ul{
     display: flex;
-    justify-content: end;
-    align-items: center;
+    justify-content: flex-end;
 }
 header nav ul li{
     padding: 0 0 0 6rem;
+    text-align: center;
 }
 header nav ul li a{
     text-decoration: none;
@@ -98,20 +116,20 @@ header section{
     grid-template-rows: 14.4rem 15rem 14rem 12rem;
     color: var(--white);
 }
-
+header section ul{
+    grid-area: social;
+    display: flex;
+    justify-content: space-between;
+    width: 32rem;
+    padding: 0;
+}
 header section ul li a{
     display: block;
     width: 6.4rem;
     height: 6.4rem;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 5.4rem;    
-}
-header section ul{
-    display: flex;
-    justify-content: space-between;
-    width: 32rem;
-    padding: 0;
+    background-size: 5.4rem;
 }
 header section ul li a.linkedin{
     background-image: url('../icons/linkedin.svg');
@@ -122,13 +140,16 @@ header section ul li a.instagram{
 header section ul li a.twitter{
     background-image: url('../icons/twitter.svg');
 }
+header section ul li a:hover{
+    opacity: 0.8;
+}
 header section p{
     font-size: 30px;
     line-height: 4rem;
 }
 header section h1{
     grid-area: title;
-    font-size: var(--title-desktop);
+    font-size: var(--title);
 }
 header section p#info{
     grid-area: info;
@@ -161,11 +182,12 @@ main{
     margin: 0 auto;
     max-width: 144.2rem;
     padding: 0;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0px 30px -12px;
 }
 main #about{
     text-align: center;
     background-color: var(--dark-blue);
-    padding: 4rem 14.6rem 14.6rem 14.6rem;
+    padding: 4rem 14.6rem 6rem 14.6rem;
 }
 main #about p{
     margin: 0 auto;
@@ -292,6 +314,7 @@ main #portfolio ul{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(540px, 1fr));
     justify-content: center;
+    justify-items: center;
     row-gap: 9rem;
     column-gap: 2rem;
 }
@@ -328,7 +351,7 @@ main #contact ul li{
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 2rem;
+    line-height: 3rem;
 }
 main #contact ul li img{
     width: 110px;
@@ -354,15 +377,88 @@ footer p a{
 footer p a:hover{
     text-decoration: underline;
 }
-/*
 
-@media (max-width: 70rem) {
-    header nav ul{
-        flex-direction: column;
+@media screen and (max-width: 1400px){
+    header #box{
+        width: 42rem;
+        height: 68rem;
     }
     header section{
-        max-width: 70rem;
+        height: 48rem;
+    }
+    header section img{
+        padding-top: 1rem;
+        width: 47rem;
         height: auto;
+        aspect-ratio: 1/1;
+    }
+}
+@media screen and (max-width: 1200px){
+    :root{
+        --title: 60px;
+        --subtitle: 36px;
+        --subtitle2: 26px;
+        --subtitle3: 20px;
+        --text2: 17px;
+    }
+    header{
+        padding: 4rem 4rem 14.6rem 4rem;
+    }
+    #info{
+        font-size: var(--subtitle2);
+    }
+}
+@media screen and (max-width: 900px){
+    :root{
+        --title: 54px;
+        --subtitle: 32px;
+        --subtitle2: 24px;
+        --subtitle3: 20px;
+        --subtitle4: 18px;
+        --text2: 17px;
+        --text3: 14px;
+        --text4: 12px;
+        --text5: 10px;
+    }
+    header #box{
+        width: 50%;
+        height: 48rem;
+    }
+    header{
+        height: auto;
+        padding-bottom: 0;
+    }
+    header nav{
+        z-index: 4;
+    }
+    header nav ul{
+        position: fixed;
+        flex-direction: column;
+        justify-content: flex-start;
+        top: 5rem;
+        height: 100vh;
+        left: -100%;
+        text-align: center;
+        transition: all 0.5s;
+        background-color: #C6C6C6;
+        padding: 2rem 0 0 0;
+        width: 100%;
+        gap: 2rem;
+    }
+    header nav ul li a, header nav ul li a.orange{
+        color: var(--dark-gray);
+    }
+    header nav ul li a:hover{
+        color: var(--light-gray);
+    }
+    header nav label{
+        display: block;
+    }
+    header section{
+        z-index: 1;    
+        padding-top: 4rem;
+        height: auto;
+        gap: 0;
         grid-template-areas:'title'
                             'info'
                             'photo'
@@ -370,31 +466,164 @@ footer p a:hover{
                             'social'
         ;
         grid-template-columns: 1fr;
-        gap: 1rem;
-        grid-template-rows: none;
-    }
-    header section figure{
-        margin: 0 auto;
-        background-image: url('../logos-Imagenes/photo-mobile.png');
-        border: 1px solid red;
-        width: 200px;
-        height: 213px;
-
+        justify-items: center;
+        grid-template-rows: auto auto auto 1fr 1fr;
     }
     header section h1{
-        text-align: center;
-    }
-    header section p#info{
-        margin: 0 auto;
-        width: 40rem;
-    }
-    header section p#experiencia{
-        width: 100%;
-        text-align: center;
+        margin: 0;
     }
     header section ul{
         margin: 0 auto;
     }
-    
+    header section p#info{
+        grid-area: info;
+        padding: 0 1rem;
+        font-size: var(--subtitle3);
+        font-weight: normal;
+        width: 16ch;
+        line-height: 2.6rem;
+        text-align: center;
+        margin-bottom: 0;
+    }
+    header section p#experiencia{
+        font-size: var(--subtitle4);
+        width: 16ch;
+        line-height: 2.6rem;
+        text-align: center;
+    }    
+    header section img{
+        padding-top: 0;
+        width: 70%;
+        height: auto;
+    }
+    header section ul{
+        width: 16rem;
+        padding: 0;
+    }
+    header section ul li a{
+        width: 5.4rem;
+        height: 5.4rem;
+        background-size: 3.2rem;
+    }
+    main #about{
+        text-align: center;
+        background-color: var(--dark-blue);
+        padding: 4rem 1.6rem 6rem 1.6rem;
+    }
+    main #about p{
+        font-size: var(--text3);
+    }
+    main #about ul{
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+        padding-top: 4rem;
+        justify-content: space-between;
+        gap: 0rem;
+        max-width: 60rem;
+    }
+    main #about ul li{
+        align-items: center;
+    }
+    main #about ul li span{
+        font-size: var(--text3);
+        line-height: 2.4rem;
+    }
+    main #about ul li span.subtitle2{
+        font-size: var(--text2);
+    }
+    main #about ul li img{
+        width: 8rem;
+        height: auto;
+    }
+    main #experience{
+        padding: 4rem 4rem 1rem 4rem;
+    }
+    main #experience ul li{
+        row-gap: 0;
+        grid-template-columns: 1.2fr 1.6fr 1fr;
+    }    
+    main #experience ul li img{
+        width: 6rem;
+        height: 6rem;
+    }
+    main #experience ul li .subtitle2{
+        font-size: var(--text2);
+    }
+    main #experience ul li .subtitle3{
+        font-size: var(--text3);
+    }
+    main #experience ul li .text2{
+        font-size: var(--text5);
+    }
+    main #skills{
+        height: auto; 
+    }
+    main #skills ul{
+        margin: 0 auto;
+        max-width: 86rem;
+        padding: 0 3rem;
+    }
+    main #skills ul li span.orange{
+        font-size: var(--subtitle);
+        padding-right: 4rem;
+    }
+    main #skills ul li span.subtitle2{
+        font-size: var(--subtitle4);
+        line-height: 2.4rem;
+    }
+    main #skills #background{
+        width: 70%;
+        height: 99%; 
+    }
+    main #portfolio{
+        padding: 0 2rem 7rem  2rem;
+    }
+    main #portfolio ul{
+        row-gap: 6rem;
+    }
+
+    main #portfolio ul li{
+        width: 290px;
+        height: 240px;
+        padding: 2rem 4rem 0 1rem;
+    }
+    main #portfolio ul li:nth-child(even){
+        height: 240px;
+    }
+    main #portfolio ul li a img{
+        width: 320px;
+        height: 260px;
+    }
+    main #contact{
+        padding: 0rem 2rem 6rem 2rem;
+    }
+    main #contact ul{
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        width: auto;
+    }
+    main #contact ul li img{
+        width: 90px;
+        height: 90px;
+        margin-top: 4rem;
+        margin-bottom: 1.2rem;
+    }    
+    main #contact ul li span{
+        line-height: 3rem;
+    }
+    main #contact ul li span.subtitle3{
+        font-size: var(--subtitle5);
+    }
+    main #contact ul li span.text2{
+        font-size: var(--text3);
+    }
+    footer{
+        height: 8rem;
+        padding: 0rem 2rem 0rem 2rem;
+    }
+    footer p.text2{
+        font-size: var(--text3);
+    }
 }
-*/
